--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   padding: 0;
@@ -12,6 +15,7 @@ body {
   color: #d8dee9;
  max-width: 100vw;
 }
+
 .intro {
   top: 60%
 }
